<resources>
    <string name="app_name">LearnByMobile</string>
    <string name="onboardingHeader1">Confidence in your words</string>
    <string name="onboardingHeader2">Take your time to learn</string>
    <string name="onboardingHeader3">The lessons you need to learn</string>
    <string name="onboardingText1">With conversation-based learning, you\'ll be talking from lesson one</string>
    <string name="onboardingText2">Develop a habit of learning and make it a part of your daily routine</string>
    <string name="onboardingText3">Using a variety of learning styles to learn and retain</string>
    <string name="onboardingButtonText1">Next</string>
    <string name="onboardingButtonText2">More</string>
    <string name="onboardingButtonText3">Choose a language</string>
    <string name="onboardingSkip">Skip onboarding</string>
    <string name="loginTitle">Login</string>
    <string name="loginHeader">For free, join now and start learning</string>
    <string name="loginEmailText">Email Address</string>
    <string name="loginPasswordText">Password</string>
    <string name="loginEmailPlaceholder">Email</string>
    <string name="loginPasswordPlaceholder">• • • • • • •</string>
    <string name="loginForgotPas">Forgot Password</string>
    <string name="loginButtonText">Login</string>
    <string name="loginMembershipText">"Not you member? "</string>
    <string name="loginTextSignup">Signup</string>
    <string name="loginTextUse">"Use can use "</string>
    <string name="loginTextGoogle">"Google for "</string>
    <string name="loginTextSignin">sign in</string>
    <string name="signupHeader">Create an Account</string>
    <string name="signupTitle">Signup</string>
    <string name="signupFNameText">First Name</string>
    <string name="signupFNamePlaceholder">YourFirstName</string>
    <string name="signupLNameText">Last Name</string>
    <string name="signupLNamePlaceholder">Your Last Name</string>
    <string name="signupEmailText">Email Address</string>
    <string name="signupEmailPlaceholder">Email</string>
    <string name="signupButtonText">Continue</string>
    <string name="signupMembershipText">"Already you member? "</string>
    <string name="signupLoginText">Login</string>
    <string name="signupPasswordHeader">Choose a Password</string>
    <string name="signupPasswordText">Password</string>
    <string name="signupPasswordPlaceholder">• • • • • • •</string>
    <string name="signupConfirmPasswordText">Confirm Password</string>
    <string name="signupConfirmButtonText">Signup</string>
    <string name="languageSelectorTitle">Language select</string>
    <string name="languageSelectorHeader">What is your Mother language?</string>
    <string name="languageSelectorButton">Choose</string>
    <string name="homeGreeting">Hello, Kamil</string>
    <string name="homeHeader">Are you ready for learning today?</string>
    <string name="homeTopUsers">Top users</string>
    <string name="homeExcersises">Available excersises</string>
    <string name="homeGuessAnimal">Guess the animal</string>
    <string name="homeWordPractice">Word practice</string>
    <string name="homeAudition">Audition</string>
    <string name="homeGame">Game</string>
    <string name="profileHeader">Your profile, Kamil</string>
    <string name="profileTheme">Switch to Dark</string>
    <string name="profileLanguage">Change mother language</string>
    <string name="profileImage">Change your image</string>
    <string name="profileLogout">Logout</string>
    <string name="animalTitle">Guess the animal</string>
    <string name="animalHeader">Write who is on image</string>
    <string name="animalCorrect">Holy Molly! That is Right!</string>
    <string name="animalNext">Next</string>
    <string name="animalWrong">Eh? Wrong answer :(</string>
    <string name="animalAgain">Try Again</string>
    <string name="animalCheck">Check</string>
    <string name="animalAnswer">"That is: "</string>
    <string name="auditionHint">Please press button and say this word. Our service will check your pronunciation</string>
    <string name="auditionCheck">Check my speech</string>
    <string name="auditionResult">Your result</string>
    <string name="auditionCorrect">Yay! Go next</string>
    <string name="auditionTitle">Listening</string>
    <string name="noConnectionHeader">No  internet connection</string>
    <string name="noConnectionButton">Check again</string>
    <string name="wordsTitle">Word practice</string>
    <string name="wordsCheck">Check</string>
    <string name="wordsNext">Next</string>
    <string name="wordsItem1_1">Собака</string>
    <string name="wordsItem1_2">Муха</string>
    <string name="wordsItem1_3">Гладиолус</string>
    <string name="wordsItem1_4">Слон</string>
    <string name="wordsItem2_1">Слон</string>
    <string name="wordsItem2_2">Кабан</string>
    <string name="wordsItem2_3">Охотник</string>
    <string name="wordsItem2_4">Перчатка</string>
    <string name="wordsItem3_1">Автомобиль</string>
    <string name="wordsItem3_2">Пантера</string>
    <string name="wordsItem3_3">Долгий</string>
    <string name="wordsItem3_4">Стремительный</string>
    <string name="gameYou">You</string>
    <string name="gameOpponent">P2</string>
    <string name="imageUse">Use that image</string>
    <string name="imageHeader">Your photo is gorgeous!</string>
    <string name="imageHint">Just resize that photo for fit in square</string>
</resources>