<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/accent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Confirm"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@color/accent">
        <ImageView
            android:id="@+id/back"
            android:src="@drawable/back_bold"
            android:layout_width="17dp"
            android:layout_height="27dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"/>

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="21dp"
            android:layout_toEndOf="@+id/back"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/auditionTitle"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnBackground">

        <TextView
            android:id="@+id/textWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:fontFamily="@font/fredoka_semibold"
            android:textSize="22sp"
            android:textColor="?attr/colorPrimary"
            android:text="" />

        <TextView
            android:id="@+id/textPronunciation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:fontFamily="@font/fredoka_medium"
            android:textSize="15sp"
            android:layout_below="@+id/textWord"
            android:textColor="?attr/colorPrimary"
            android:text="" />

        <TextView
            android:id="@+id/textHint"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:fontFamily="@font/fredoka_medium"
            android:layout_marginTop="68dp"
            android:textSize="22sp"
            android:layout_below="@+id/textPronunciation"
            android:textColor="?attr/colorPrimary"
            android:text="@string/auditionHint" />


        <android.widget.Button
            android:id="@+id/buttonCheck"
            style="@style/activeButton"
            android:layout_width="327dp"
            android:layout_height="56dp"
            android:layout_below="@+id/textHint"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/auditionCheck"
            />

    </RelativeLayout>
</LinearLayout>